[project]
name = "learning-command-center"
version = "0.1.0"
description = "Personal Streamlit app to track DE/ML/DS learning resources using DuckDB."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.40.0,<2.0.0",
    "duckdb>=1.0.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0"
]

[tool.flake8]
exclude = ".venv,.git,__pycache__,.pytest_cache,data"
max-line-length = 127


